# jwt-rustcrypto

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: algorithm.rs  decode.rs  ecdsa_signing.rs  encode.rs  error.rs  header.rs  hmac_signing.rs  lib.rs  pem.rs  rsa_signing.rs  secret_key.rs  signing_key.rs  validation.rs  verifying_key.rs
tests/: decode_test.rs  encode_test.rs
tests/keys/: ec_private_key_p256_pkcs8.pem  ec_private_key_p256k_pkcs8.pem  ec_private_key_p384_pkcs8.pem  ec_private_key_p512_pkcs8.pem  ec_public_key_ec_p512_pkcs8.pem  ec_public_key_p256_pkcs8.pem  ec_public_key_p256k_pkcs8.pem  ec_public_key_p384_pkcs8.pem  rsa_private_key_pkcs1.pem  rsa_private_key_pkcs8.pem  rsa_public_key_pkcs1.pem  rsa_public_key_pkcs8.pem  test_pub_rsa_pkcs1.pem  test_pub_rsa_pkcs8.pem
